# skill-meeting

./: LICENSE  README.md  setup.cfg
skill_meeting/: __init__.py  skill.py
