[metadata]
name = skill-meeting
provides = skill_meeting
description = "An Opsdroid Skill for managing meetings."
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Aperio Software
author_email = stuart@aperiosoftware.com
license = Apache 2
license_file = LICENSE
url = https://aperiosoftware.com

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
install_requires =
  opsdroid

[options.extras_require]
tests =
  pytest

[tool:pytest]
minversion = 3.0
testpaths = "tests"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info"

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
length_sort = False
length_sort_stdlib = True
line_length = 110
